# CSCI-411-SP-2024-CODE

./: .gitignore  Cargo.toml  Makefile  rename_tests  run
assignment_01/: Cargo.toml  main.cpp  run
assignment_01/src/: main.rs
assignment_01/tests/: 01_test_004.out  01_test_005.out  01_test_006.out  01_test_009.out  01_test_010.out  01_test_013.out  01_test_016.out  01_test_023.out  01_test_025.out  01_test_027.out  01_test_028.out  01_test_030.out  01_test_031.out  01_test_032.out  01_test_035.out  01_test_036.out  01_test_038.out  01_test_039.out  01_test_041.out  01_test_043.out  01_test_044.out  01_test_047.out  01_test_048.out  01_test_049.out  01_test_050.out  01_test_051.out  01_test_052.out  01_test_054.out  01_test_055.out  01_test_058.out  01_test_059.out  01_test_064.out  01_test_066.out  01_test_067.out  01_test_068.out  01_test_069.out  01_test_071.out  01_test_073.out  01_test_076.out  01_test_078.out  (+62 more)
assignment_02/: Makefile  main.cpp  run
assignment_03/: main.cpp
assignment_03/src/: main.rs
assignment_03/tests/: custom.in  exam.in  test_011.out  test_012.in  test_012.out  test_013.in  test_013.out  test_014.in  test_014.out  test_015.in  test_016.in  test_016.out  test_017.in  test_017.out  test_018.in  test_019.in  test_019.out  (+148 more)
assignment_04/: Makefile  main.cpp
assignment_05/: Assignment_5_Tests.tar  main.cpp
assignment_09/: Makefile  main.cpp  turing_machine_skeleton.cpp
floyd-warshall/: main.cpp
huffman_encoding/: main.cpp
leaf_partition/: Cargo.toml  Makefile  main.cpp
tree_vc/: Cargo.toml  main.cpp  tree_vc_skeleton.cpp
(+652 files in other folders)
