[workspace]
resolver = "2"
members = [
    "assignment_01",
    "assignment_02",
    "assignment_03",
    "assignment_04",
    "assignment_05",
    "common",
    "floyd-warshall",
    "huffman_encoding",
    "leaf_partition",
    "tree_vc",
]

[workspace.dependencies.common]
path = "./common"

[workspace.dependencies.clap]
version = "4.3.0"
features = ["derive"]
